// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListInline component should render correctly with children 1`] = `
<ul
  className="sc-iBPTik ifatnW"
>
  <li
    className="sc-fubCzh jxAQwe"
  >
    <div>
      This
    </div>
  </li>
  <li
    className="sc-fubCzh jxAQwe"
  >
    <div>
      is
    </div>
  </li>
  <li
    className="sc-fubCzh jxAQwe"
  >
    <div>
      an
    </div>
  </li>
  <li
    className="sc-fubCzh jxAQwe"
  >
    <div>
      example
    </div>
  </li>
</ul>
`;

exports[`ListInline component should render correctly without children 1`] = `
<ul
  className="sc-iBPTik ifatnW"
/>
`;

exports[`ListInline component should render with custom padding 1`] = `
<ul
  className="sc-iBPTik ifatnW"
>
  <li
    className="sc-fubCzh jxAQwe"
  >
    <div>
      This
    </div>
  </li>
  <li
    className="sc-fubCzh jxAQwe"
  >
    <div>
      is
    </div>
  </li>
  <li
    className="sc-fubCzh jxAQwe"
  >
    <div>
      fun
    </div>
  </li>
</ul>
`;
